# Sumy_V3

./: .dockerignore  .gitignore  ACTUALIZACION.md  Dockerfile  Dockerfile.dev  FastAPI - Swagger UI.html  README.md  TODO.txt  adk_config.py  adk_runner.py  docker-build.sh  env.example  fix_coordinator.py  fleet.yaml  hybrid_main.py  interact_agents.py  main.py  package-lock.json  pyproject.toml  quick_rebuild.sh  quick_update.sh  rate_limit_handler.py  requirements.txt  run.sh  run_dev.sh  simple_main.py  simple_test_adk.py  test_interaction.py  update_knowledge.sh  web_ui.html
.cursor/rules/: adk.mdc
agents/: agent_builder.py  usda_api_client.py
agents/coordinator/: __init__.py  adk_coordinator.py  agent.py
agents/culinary/: __init__.py  adk_agent.py  agent.py
agents/gastronomy_coordinator/: __init__.py  agent.py
agents/instrucciones/: COORDINATOR_INSTRUCTION.txt  CULINARY_INSTRUCTION.txt  NUTRITION_INSTRUCTION.txt  SUMILLER_INSTRUCTION.txt
coordinator-mcp/: claude_desktop_config  coordinator_server.py  install.sh  requirements.txt  run_server.sh  server.py  test_mcp_server.py
coordinator_agent/: agent.py
culinary_agent/: agent.py
culinary_index/: index.faiss  index.pkl
data_ingestion/: __init__.py  ingest.py  json_culinary_loader.py  json_wine_loader.py
enology_index/: index.faiss  index.pkl
gastronomy_fleet/: .dockerignore  Dockerfile  ingest.py  main.py  requirements.txt
nutrition_agent/: agent.py
nutrition_index/: index.faiss  index.pkl
public/: trace_logger.js
static/: rate_limit.html
sumiller_agent/: agent.py
(+25 files in other folders)
