[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gastronomy-mcp-server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "mcp[cli]",
    "aiohttp>=3.8.0"
]

[tool.hatch.build.targets.wheel]
only-include = [
    "simple_fastmcp_server.py",
    "test_complete_workflow.py",
    "test_simple.py"
] 